resolved Drug Classification edit form alignment issue

--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -249,7 +249,11 @@ table.dataTable {
 	}
 	.nested-fields {
 		margin: 20px 0;
-		padding-bottom: 10px;
+		padding: 0 15px 10px;
+		clear: both;
+	}
+	.col-md-12 .nested-fields {
+		padding: 0;
 	}
 }
 .data_table {
